<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    >
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/status_001"
		android:id="@+id/statusText"
    	android:textColor="@android:color/black"
	    />
	<Button
		android:text="@string/btn_001" 
		android:id="@+id/button1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:onClick="onClickButton"
		/>
	<TextView
		android:id="@+id/textView1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textColor="@android:color/black"
		/>
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/mes_002"
	    android:textColor="@android:color/black"
	    />
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	    android:text="@string/mes_004"
	    android:textColor="@android:color/black"
		/>
	<Button
		android:text="@string/btn_002" 
		android:id="@+id/button2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:onClick="onClickButton"
		/>
</LinearLayout>
